--- a/BE/auth-service/package.json
+++ b/BE/auth-service/package.json
@@ -25,6 +25,8 @@
     "@nestjs/mongoose": "^10.0.6",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.3.1",
+    "bcryptjs": "^2.4.3",
+    "class-validator": "^0.14.1",
     "mongoose": "^8.3.2",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
@@ -33,6 +35,7 @@
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
+    "@types/bcryptjs": "^2.4.6",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
